--- a/client/main.css
+++ b/client/main.css
@@ -14,10 +14,12 @@ main {padding: 0 5%}
 .headerTitle {background-image:url("https://wallpaperaccess.com/full/497086.jpg"); background-size: cover; background-position: 50%; height: 100px; display: flex; flex-direction: column; justify-content: center; border-bottom: 2px solid black}
 h1 {margin: 0; color: white}
 h1 a {color: white; background-color: rgba(0,0,0,0.23); padding: 30px;}
+H2 {font-size: 1.5rem}
 
 .userLink {color: black}
 .userLink:hover {text-decoration: none}
 
+.btn-style {border-radius: 50px !important}
 
  /*   _             _             _   _             
  | \ | | __ ___   _(_) __ _  __ _| |_(_) ___  _ __  
@@ -28,7 +30,7 @@ h1 a {color: white; background-color: rgba(0,0,0,0.23); padding: 30px;}
 
 nav ul li:last-child {text-align: -webkit-right; padding-inline-end: 50px;}
 
-nav ul {display: flex;}
+nav ul {display: flex; margin-bottom: 10vh}
 nav .col {text-align: center; background-color: rgba(255,255,255,1); line-height: 100px; border-bottom: 2px solid rgba(0,0,0,0.1); transition: 1s ease;}
 
 nav .col:hover {background-color: rgba(255,255,255,1)}
@@ -45,11 +47,13 @@ ul {display: block; margin-block-start: 0; margin-block-end: 0; margin-bottom: 3
  |_|   |_|  \___/|_| |_|_|*/
 
 .infosProfil {text-align: center}
-
+.infosProfil .itemProfil {margin-bottom: 10px}
 
 .avatarProfil {width: 200px; height: 200px; border-radius: 100%; margin-bottom: 5vh }
+
 .infosProfil .usernameProfil {font-weight: bolder; font-size: 1.2rem; color:rgba(0,0,0,0.70)}   
 .infosProfil .rankProfil {font-size: 0.7rem}
+.infosProfil .contributionsProfil {font-weight: bolder}
 .infosProfil .scoreProfil {font-weight: bolder; color: rgba(0,0,0,0.40); margin-bottom: 3vh}
 
 /*_____ _      _        _       
@@ -66,7 +70,7 @@ ul {display: block; margin-block-start: 0; margin-block-end: 0; margin-bottom: 3
 /* Design d'un ticket 
 ______________________________________________________*/
 
-.ticket-single {background-color: rgba(255,255,255,0.85); margin: 10px 0; box-shadow: 10px 10px 30px -15px rgba(0,0,0,0.7); border-radius: 0px; overflow: hidden}
+.ticket-single {background-color: rgba(255,255,255,0.85); margin: 0 0 20px 0; box-shadow: 10px 10px 30px -15px rgba(0,0,0,0.7); border-radius: 0px; overflow: hidden}
 
 .card-title {font-size: 1rem; font-weight: bolder}
 .card-text-date {font-size: 0.8rem; color: rgba(0,0,0,0.5)}
@@ -113,18 +117,22 @@ ______________________________________________________*/
  |_____\__,_|\__,_|\__,_|\___|_|   */
 
 
-.ladder-table {background-color: white}
+.ladder-table {background-color: rgba(255,255,255,0.10)}
+
+.table th {border: none; padding: 0.75rem 0.5rem}
+.table td {padding: 0.5rem}
 
 .ladder-table thead {border: none}
 
 .ladder-table tbody {font-size: 0.9rem}
 
-.ladder-table tbody tr:first-child {background-color:rgba(255,244,200,0.60)}
-.ladder-table tbody tr:first-child:hover {background-color:rgba(255,244,100,0.60)}
-.ladder-table tbody tr:nth-child(2) {background-color:rgba(229,229,229,0.40)}
-.ladder-table tbody tr:nth-child(2):hover {background-color:rgba(200,200,200,0.40)}
-.ladder-table tbody tr:nth-child(3) {background-color: rgba(255,214,113,0.20)}
-.ladder-table tbody tr:nth-child(3):hover {background-color: rgba(255,200,50,0.30)}  
+.ladder-table tbody tr:first-child {background-color:rgba(255,244,200,0.40)}
+.ladder-table tbody tr:nth-child(2) {background-color:rgba(229,229,229,0.20)}
+.ladder-table tbody tr:nth-child(3) {background-color: rgba(255,214,113,0.10)}
+
+.ladder-table tbody tr:first-child:hover {background-color:rgba(255,244,100,0.30)}
+.ladder-table tbody tr:nth-child(2):hover {background-color:rgba(200,200,200,0.20)}
+.ladder-table tbody tr:nth-child(3):hover {background-color: rgba(255,200,50,0.10)}  
 .ladder-table tbody tr:hover {background-color: rgba(0,0,0,0.01)}
 
 
