--- a/client/ui/layout/layout.html
+++ b/client/ui/layout/layout.html
@@ -1,6 +1,6 @@
 <template name="layout">
 	<header>
-	<div class="headerTitle"><h1><a href="/">Correcteur collaboratif</a></h1></div>
+	<!--<div class="headerTitle"><h1><a href="/">Correcteur collaboratif</a></h1></div>-->
 	
 	{{> navbar}}
 	</header>
